# railway-cli-windows-binaries

./: Cargo.toml  Dockerfile  README.md  build.rs  files.sh
src/: main.rs
static/: index.html
