[package]
name = "railway-cli-windows-binaries"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6"
env_logger = "0.9.0"
log = "0.4"
actix-web-static-files = "3.0"

[build-dependencies]
actix-web-static-files = "3.0"

[profile.release]
lto = "fat"
debug = false
opt-level = 3
panic = "abort"
strip = "symbols"
codegen-units = 1
overflow-checks = false
